routing.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serverservice
spec:
  hosts:
    - serverservice
  http:
  - route:
    - destination:
        host: serverservice
        subset: v1
      weight: 100
    - destination:
        host: serverservice
        subset: v2
      weight: 0
